--- a/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
+++ b/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
@@ -245,7 +245,7 @@ services:
     pim_connector.writer.file.csv_family:
         class: '%pim_connector.writer.file.csv.class%'
         arguments:
-            - '@pim_connector.array_converter.dummy'
+            - '@pim_connector.array_converter.standard_to_flat.family'
             - '@pim_connector.writer.file.file_path_resolver'
             - '@pim_connector.writer.file.flat_item_buffer'
             - '@pim_connector.writer.file.flat_item_buffer_flusher'
@@ -278,7 +278,7 @@ services:
     pim_connector.writer.file.xlsx_family:
         class: '%pim_connector.writer.file.xlsx.class%'
         arguments:
-             - '@pim_connector.array_converter.dummy'
+             - '@pim_connector.array_converter.standard_to_flat.family'
              - '@pim_connector.writer.file.file_path_resolver'
              - '@pim_connector.writer.file.flat_item_buffer'
              - '@pim_connector.writer.file.flat_item_buffer_flusher'
