--- a/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
+++ b/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
@@ -237,7 +237,7 @@ services:
     pim_connector.writer.file.csv_group:
         class: '%pim_connector.writer.file.csv.class%'
         arguments:
-            - '@pim_connector.array_converter.dummy'
+            - '@pim_connector.array_converter.standard_to_flat.group'
             - '@pim_connector.writer.file.file_path_resolver'
             - '@pim_connector.writer.file.flat_item_buffer'
             - '@pim_connector.writer.file.flat_item_buffer_flusher'
@@ -270,7 +270,7 @@ services:
     pim_connector.writer.file.xlsx_group:
         class: '%pim_connector.writer.file.xlsx.class%'
         arguments:
-             - '@pim_connector.array_converter.dummy'
+             - '@pim_connector.array_converter.standard_to_flat.group'
              - '@pim_connector.writer.file.file_path_resolver'
              - '@pim_connector.writer.file.flat_item_buffer'
              - '@pim_connector.writer.file.flat_item_buffer_flusher'
