--- a/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
+++ b/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
@@ -150,11 +150,6 @@ services:
     pim_connector.writer.file.media_exporter_path_generator:
         class: '%pim_connector.writer.file.media_exporter_path_generator.class%'
 
-    pim_connector.writer.file.flat_item_buffer:
-        class: '%pim_connector.writer.file.flat_item_buffer.class%'
-        arguments:
-            - '@akeneo_buffer.factory.json_file_buffer'
-
     pim_connector.writer.file.product.bulk_file_exporter:
         class: '%pim_connector.writer.file.product.bulk_file_exporter.class%'
         arguments:
@@ -182,14 +177,14 @@ services:
         class: '%pim_connector.writer.file.csv.class%'
         arguments:
             - '@pim_connector.writer.file.file_path_resolver'
-            - '@pim_connector.writer.file.flat_item_buffer'
+            - '@pim_connector.factory.flat_item_buffer'
             - '@pim_connector.writer.file.flat_item_buffer_flusher'
 
     pim_connector.writer.file.csv_product:
         class: '%pim_connector.writer.file.csv_product.class%'
         arguments:
             - '@pim_connector.writer.file.file_path_resolver'
-            - '@pim_connector.writer.file.flat_item_buffer'
+            - '@pim_connector.factory.flat_item_buffer'
             - '@pim_connector.writer.file.product.bulk_file_exporter'
             - '@pim_connector.writer.file.product.flat_item_buffer_flusher'
 
@@ -197,7 +192,7 @@ services:
         class: '%pim_connector.writer.file.csv_variant_group.class%'
         arguments:
             - '@pim_connector.writer.file.file_path_resolver'
-            - '@pim_connector.writer.file.flat_item_buffer'
+            - '@pim_connector.factory.flat_item_buffer'
             - '@pim_connector.writer.file.product.bulk_file_exporter'
             - '@pim_connector.writer.file.flat_item_buffer_flusher'
 
@@ -224,14 +219,14 @@ services:
         class: '%pim_connector.writer.file.xlsx.class%'
         arguments:
              - '@pim_connector.writer.file.file_path_resolver'
-             - '@pim_connector.writer.file.flat_item_buffer'
+             - '@pim_connector.factory.flat_item_buffer'
              - '@pim_connector.writer.file.flat_item_buffer_flusher'
 
     pim_connector.writer.file.xlsx_product:
         class: '%pim_connector.writer.file.xlsx_product.class%'
         arguments:
              - '@pim_connector.writer.file.file_path_resolver'
-             - '@pim_connector.writer.file.flat_item_buffer'
+             - '@pim_connector.factory.flat_item_buffer'
              - '@pim_connector.writer.file.product.bulk_file_exporter'
              - '@pim_connector.writer.file.product.flat_item_buffer_flusher'
 
@@ -239,7 +234,7 @@ services:
         class: '%pim_connector.writer.file.xlsx_variant_group.class%'
         arguments:
              - '@pim_connector.writer.file.file_path_resolver'
-             - '@pim_connector.writer.file.flat_item_buffer'
+             - '@pim_connector.factory.flat_item_buffer'
              - '@pim_connector.writer.file.product.bulk_file_exporter'
              - '@pim_connector.writer.file.flat_item_buffer_flusher'
 
