--- a/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
+++ b/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
@@ -221,7 +221,7 @@ services:
     pim_connector.writer.file.csv_attribute_option:
         class: '%pim_connector.writer.file.csv.class%'
         arguments:
-            - '@pim_connector.array_converter.dummy'
+            - '@pim_connector.array_converter.standard_to_flat.attribute_option'
             - '@pim_connector.writer.file.file_path_resolver'
             - '@pim_connector.writer.file.flat_item_buffer'
             - '@pim_connector.writer.file.flat_item_buffer_flusher'
@@ -302,7 +302,7 @@ services:
     pim_connector.writer.file.xlsx_attribute_option:
         class: '%pim_connector.writer.file.xlsx.class%'
         arguments:
-             - '@pim_connector.array_converter.dummy'
+             - '@pim_connector.array_converter.standard_to_flat.attribute_option'
              - '@pim_connector.writer.file.file_path_resolver'
              - '@pim_connector.writer.file.flat_item_buffer'
              - '@pim_connector.writer.file.flat_item_buffer_flusher'
