--- a/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
+++ b/src/Pim/Bundle/ConnectorBundle/Resources/config/writers.yml
@@ -229,7 +229,7 @@ services:
     pim_connector.writer.file.csv_association_type:
         class: '%pim_connector.writer.file.csv.class%'
         arguments:
-            - '@pim_connector.array_converter.dummy'
+            - '@pim_connector.array_converter.standard_to_flat.association_type'
             - '@pim_connector.writer.file.file_path_resolver'
             - '@pim_connector.writer.file.flat_item_buffer'
             - '@pim_connector.writer.file.flat_item_buffer_flusher'
@@ -310,7 +310,7 @@ services:
     pim_connector.writer.file.xlsx_association_type:
         class: '%pim_connector.writer.file.xlsx.class%'
         arguments:
-             - '@pim_connector.array_converter.dummy'
+             - '@pim_connector.array_converter.standard_to_flat.association_type'
              - '@pim_connector.writer.file.file_path_resolver'
              - '@pim_connector.writer.file.flat_item_buffer'
              - '@pim_connector.writer.file.flat_item_buffer_flusher'
